force-app/main/default/objects/Product2/fields/ActivitySectionTxt__c.field-meta.xml
<CustomField>
    <fullName>ActivitySectionTxt__c</fullName>
    <label>Setor de atividade</label>
    <length>2</length>
    <type>Text</type>
</CustomField>