force-app/main/default/objects/Product2/fields/Corrente_Curto_Circuito__c.field-meta.xml
<CustomField>
    <fullName>Corrente_Curto_Circuito__c</fullName>
    <label>Corrente Curto Circuito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20 kA</fullName>
            </value>
            <value>
                <fullName>40 kA</fullName>
            </value>
            <value>
                <fullName>60 kA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>