force-app/main/default/objects/Product2/fields/GrossWeightNmb__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightNmb__c</fullName>
    <label>Peso bruto</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>