force-app/main/default/objects/Product2/fields/HeightNmb__c.field-meta.xml
<CustomField>
    <fullName>HeightNmb__c</fullName>
    <label>Altura</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>