force-app/main/default/objects/Product2/fields/Horas_Padrao__c.field-meta.xml
<CustomField>
    <fullName>Horas_Padrao__c</fullName>
    <description>Numero de horas para desenvolver o projeto.</description>
    <label>Horas Padrão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>