force-app/main/default/objects/Product2/fields/Image2Txt__c.field-meta.xml
<CustomField>
    <fullName>Image2Txt__c</fullName>
    <label>Imagem Base64 2</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>