force-app/main/default/objects/Product2/fields/ImageExtensionTxt__c.field-meta.xml
<CustomField>
    <fullName>ImageExtensionTxt__c</fullName>
    <label>Imagem Extensão</label>
    <length>10</length>
    <type>Text</type>
</CustomField>