force-app/main/default/objects/Product2/fields/Imagem3Txt__c.field-meta.xml
<CustomField>
    <fullName>Imagem3Txt__c</fullName>
    <label>Imagem Base64 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>