force-app/main/default/objects/Product2/fields/ImageTxt__c.field-meta.xml
<CustomField>
    <fullName>ImageTxt__c</fullName>
    <label>Imagem Base64</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>