force-app/main/default/objects/Product2/fields/IndividualEANTxt__c.field-meta.xml
<CustomField>
    <fullName>IndividualEANTxt__c</fullName>
    <label>EAN individual / código de barras</label>
    <length>18</length>
    <type>Text</type>
</CustomField>