force-app/main/default/objects/Product2/fields/InstructionsTxt__c.field-meta.xml
<CustomField>
    <fullName>InstructionsTxt__c</fullName>
    <label>Instruções de Instalação</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>