force-app/main/default/objects/Product2/fields/IrrigationBln__c.field-meta.xml
<CustomField>
    <fullName>IrrigationBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o produto faz parte do Mix Irrigação</description>
    <label>Mix Irrigação</label>
    <type>Checkbox</type>
</CustomField>