force-app/main/default/objects/Product2/fields/IrrigationItemBln__c.field-meta.xml
<CustomField>
    <fullName>IrrigationItemBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Irrigação</label>
    <type>Checkbox</type>
</CustomField>