force-app/main/default/objects/Product2/fields/LengthNmb__c.field-meta.xml
<CustomField>
    <fullName>LengthNmb__c</fullName>
    <label>Comprimento</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>