force-app/main/default/objects/Product2/fields/LiquidWeightNmb__c.field-meta.xml
<CustomField>
    <fullName>LiquidWeightNmb__c</fullName>
    <label>Peso líquido</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>