force-app/main/default/objects/Product2/fields/LoadPercentageNmb__c.field-meta.xml
<CustomField>
    <fullName>LoadPercentageNmb__c</fullName>
    <label>Percentual de Carga</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>