force-app/main/default/objects/Product2/fields/MaterialGroup__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroup__c</fullName>
    <label>Grupo de Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MaterialsGroup</valueSetName>
    </valueSet>
</CustomField>