force-app/main/default/objects/Product2/fields/ProductCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeTxt__c</fullName>
    <externalId>true</externalId>
    <label>Código do produto</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>