force-app/main/default/objects/Product2/fields/ProductGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupTxt__c</fullName>
    <label>Grupo de Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductGroup</valueSetName>
    </valueSet>
</CustomField>