force-app/main/default/objects/Product2/fields/ProductSubsystemTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductSubsystemTxt__c</fullName>
    <label>Subsistema de Produtos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subsystem</valueSetName>
    </valueSet>
</CustomField>