force-app/main/default/objects/Product2/fields/ProductSystemTxt__c.field-meta.xml
<CustomField>
    <fullName>ProductSystemTxt__c</fullName>
    <label>Sistema de Produtos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>System</valueSetName>
    </valueSet>
</CustomField>