force-app/main/default/objects/Product2/fields/ReleaseBln__c.field-meta.xml
<CustomField>
    <fullName>ReleaseBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o produto é um lançamento (para uso do PVC)</description>
    <label>Lançamento</label>
    <type>Checkbox</type>
</CustomField>