force-app/main/default/objects/Product2/fields/RunnerBln__c.field-meta.xml
<CustomField>
    <fullName>RunnerBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar se o produto é do tipo &quot;Runner&quot;, para uso do PVC</description>
    <label>Produto Runner</label>
    <type>Checkbox</type>
</CustomField>