force-app/main/default/objects/Product2/fields/SpecialProductBln__c.field-meta.xml
<CustomField>
    <fullName>SpecialProductBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar se o produto faz parte da Cesta de Produtos Especiais, usado no PVC</description>
    <label>Produto Especial</label>
    <type>Checkbox</type>
</CustomField>