force-app/main/default/objects/Product2/fields/StandardPackageAmountNmb__c.field-meta.xml
<CustomField>
    <fullName>StandardPackageAmountNmb__c</fullName>
    <description>Quantidade de itens por embalagem padrão</description>
    <label>Quantidade da Embalagem Padrão</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>