force-app/main/default/objects/Product2/fields/UMTxt__c.field-meta.xml
<CustomField>
    <fullName>UMTxt__c</fullName>
    <label>Unidade de medida (UM)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>