force-app/main/default/objects/Product2/fields/UnitPriceNmb__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceNmb__c</fullName>
    <description>Campo de Preço Unitário utilizado, provisoriamente, no Mobile</description>
    <label>Preço Unitário Mobile</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>