force-app/main/default/objects/Product2/fields/UnitWeightTxt__c.field-meta.xml
<CustomField>
    <fullName>UnitWeightTxt__c</fullName>
    <label>Unidade peso</label>
    <length>3</length>
    <type>Text</type>
</CustomField>