force-app/main/default/objects/Product2/fields/Voltage_Range__c.field-meta.xml
<CustomField>
    <fullName>Voltage_Range__c</fullName>
    <label>Voltage Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>