force-app/main/default/objects/Product2/fields/WidthNmb__c.field-meta.xml
<CustomField>
    <fullName>WidthNmb__c</fullName>
    <label>Largura</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>